--- a/packages/core/src/components/date-time-card/date-time-card.scss
+++ b/packages/core/src/components/date-time-card/date-time-card.scss
@@ -54,7 +54,7 @@
     }
 
     .content {
-      padding: 0 $medium-space $medium-space $medium-space;
+      padding: 0 $medium-space $small-space $medium-space;
       flex: 1 1 auto;
       display: flex;
       flex-direction: column;
