--- a/packages/core/src/components/datetime-picker/datetime-picker.scss
+++ b/packages/core/src/components/datetime-picker/datetime-picker.scss
@@ -51,7 +51,7 @@
   }
 
   .btn-select-date-container {
-    padding: 1rem;
+    padding: 0 1rem 1rem;
 
     & .btn-select-date {
       width: var(--btn-width);
